--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
   </header>
 
   <main class="container">
-    
+    <div>
+      <ul id="task-list">
+        <li>Task 1</li>
+        <li>Task 2</li>
+      </ul>
+    </div>
 
     <div class="main-f">
       <div class="f-1">
