radio button updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       </div>
 
       <div class="to-do-list">
-        <input type="radio" name="" id="radio">
+        <div class="click-me">
+          <button  id="radio" class="click-btn click-btn-bg"></button>
+        </div>
+        <!-- <input type="radio" name="" id="radio"> -->
         <input type="text" name="to-do" class="to-do" placeholder="Create a new todo..." size="35">
       </div>
     </section>
@@ -38,6 +41,9 @@
 
   <main class="container">
     <div class="list">
+      <!-- <div class="click-me">
+        <button id="radio-list" class="click-btn click-btn-bg complete"></button>
+      </div> -->
       <input type="radio" name="" id="radio-list" class="complete">
       <p class="list-p">Jog around the park 3x</p>
       <svg class="cross hidden" xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg>
